--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,8 @@
 # Environment Variables Configuration
-
-# Server Configuration
+# This file contains example environment variables for the application.
 PORT=3000
 
 # API Security
 API_KEY=your-secret-api-key
 
-# Application Environment
 NODE_ENV=development
-
-# Optional: Database Configuration (for future use)
-# DATABASE_URL=your-database-url
-
-# Optional: CORS Configuration (for future use)
-# CORS_ORIGIN=http://localhost:3000
-
-# Optional: Rate Limiting (for future use)
-# RATE_LIMIT_WINDOW_MS=900000
-# RATE_LIMIT_MAX_REQUESTS=100
